// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptPage rendering tests prompt null - test 1`] = `<div />`;

exports[`PromptPage rendering tests prompt retrieved - collectionId defined - test 1`] = `
<div>
  <div
    class="h-screen bg-slate-50"
    data-testid="prompt-view-page"
  >
    <div
      class="flex h-full flex-col bg-slate-50"
      data-testid="prompt-view"
    >
      <div
        class="sticky top-0 z-40 flex h-14 shrink-0 items-center border-b border-slate-200 bg-white px-6"
      >
        <nav
          aria-label="breadcrumb"
          data-slot="breadcrumb"
          data-testid="template-breadcrumb"
        >
          <ol
            class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
            data-slot="breadcrumb-list"
          >
            <li
              class="inline-flex items-center gap-1.5"
              data-slot="breadcrumb-item"
            >
              <a
                class="transition-colors hover:text-foreground"
                data-slot="breadcrumb-link"
                data-testid="root-link"
                href="/collections/457bf695-6f74-44aa-9b3a-e179ea9e8171"
              >
                name 1
              </a>
            </li>
            <li
              aria-hidden="true"
              class="[&>svg]:size-3.5"
              data-slot="breadcrumb-separator"
              role="presentation"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-right"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </li>
            <li
              class="inline-flex items-center gap-1.5"
              data-slot="breadcrumb-item"
            >
              <span
                aria-current="page"
                aria-disabled="true"
                class="font-normal text-foreground max-w-40 truncate"
                data-slot="breadcrumb-page"
                role="link"
                title="title 1"
              >
                title 1
              </span>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="flex-1 overflow-y-auto"
      >
        <div
          class="mx-auto max-w-7xl px-6 py-8"
        >
          <div
            class="grid gap-8 lg:grid-cols-[1fr_260px]"
          >
            <div
              class="rounded-xl bg-white p-6 shadow-sm"
            >
              <div
                data-testid="template-view-form"
              >
                <div
                  class="mb-8"
                >
                  <div
                    class="mb-3 flex flex-wrap gap-2"
                    data-testid="categories"
                  >
                    <span
                      class="rounded-full border border-blue-200 bg-blue-50 px-2.5 py-0.5 text-xs font-medium text-blue-600"
                    >
                      category 0
                    </span>
                    <span
                      class="rounded-full border border-blue-200 bg-blue-50 px-2.5 py-0.5 text-xs font-medium text-blue-600"
                    >
                      category 1
                    </span>
                    <span
                      class="rounded-full border border-blue-200 bg-blue-50 px-2.5 py-0.5 text-xs font-medium text-blue-600"
                    >
                      category 2
                    </span>
                  </div>
                  <h1
                    class="mb-2 text-3xl font-bold text-slate-900"
                  >
                    title 1
                  </h1>
                  <p
                    class="text-sm text-slate-500"
                  >
                    Erstellt 
                    27.09.2025
                     ·
                     
                    model 1
                  </p>
                </div>
                <div
                  class="mb-8"
                  data-testid="description"
                >
                  <div
                    class="mb-3 border-t border-slate-200 pt-4"
                  >
                    <span
                      class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
                    >
                      Beschreibung
                    </span>
                  </div>
                  <div
                    class="text-sm leading-relaxed text-slate-900"
                    data-testid="react-md"
                  >
                    <div
                      data-testid="react-markdown-mock"
                    >
                      description 1
                    </div>
                  </div>
                </div>
                <div
                  class="border-t border-slate-200 pt-4"
                >
                  <div
                    data-testid="prompt-text"
                  >
                    <div
                      class="mb-3 flex items-center justify-between"
                    >
                      <span
                        class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
                      >
                        Prompt-Text
                      </span>
                      <button
                        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 rounded-md gap-1.5 has-[>svg]:px-2.5 h-8 cursor-pointer px-3 hover:bg-slate-200"
                        data-slot="button"
                        data-testid="copy-btn"
                        title="In Zwischenablage kopieren"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-copy mr-2 h-4 w-4 text-slate-600"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="14"
                            rx="2"
                            ry="2"
                            width="14"
                            x="8"
                            y="8"
                          />
                          <path
                            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                          />
                        </svg>
                        <span
                          class="text-sm text-slate-600"
                        >
                          Kopieren
                        </span>
                      </button>
                    </div>
                    <div
                      class="rounded-lg bg-slate-100 p-5"
                    >
                      <div
                        class="font-mono text-sm leading-relaxed text-slate-900"
                        data-testid="react-md"
                      >
                        <div
                          data-testid="react-markdown-mock"
                        >
                          content 1
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <aside
              class="space-y-3 lg:sticky lg:top-8 lg:self-start"
              data-testid="prompt-sidebar"
            >
              <button
                class="inline-flex items-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-700 text-white hover:bg-blue-800 w-full justify-center py-5 text-sm"
                data-slot="button"
                data-testid="use-prompt-btn"
              >
                <span>
                  Prompt anwenden
                </span>
              </button>
              <div
                class="space-y-1 pt-1"
              >
                <a
                  class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer justify-start"
                  data-slot="button"
                  data-testid="edit-prompt-btn"
                  href="/templates/334db648-f300-4284-8149-075ff465d751/edit?collectionId=457bf695-6f74-44aa-9b3a-e179ea9e8171"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pen mr-2 h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                    />
                  </svg>
                  Bearbeiten
                </a>
                <button
                  class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer justify-start"
                  data-slot="button"
                  data-testid="download-prompt-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-download mr-2 h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15V3"
                    />
                    <path
                      d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                    />
                    <path
                      d="m7 10 5 5 5-5"
                    />
                  </svg>
                  Herunterladen
                </button>
                <button
                  class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:hover:bg-accent/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer justify-start text-red-600 hover:bg-red-50 hover:text-red-700"
                  data-slot="button"
                  data-testid="delete-prompt-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-trash2 lucide-trash-2 mr-2 h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 11v6"
                    />
                    <path
                      d="M14 11v6"
                    />
                    <path
                      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                    />
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                    />
                  </svg>
                  Löschen
                </button>
                <div
                  data-slot="alert-dialog"
                  data-testid="mock-react-alert-dialog-root"
                >
                  <div
                    data-slot="alert-dialog-portal"
                    data-testid="mock-react-alert-dialog-portal"
                  >
                    <div
                      class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
                      data-slot="alert-dialog-overlay"
                      data-testid="mock-react-alert-dialog-overlay"
                    />
                  </div>
                </div>
              </div>
              <div
                class="border-t border-slate-200 pt-4"
              >
                <p
                  class="mb-2 text-xs font-medium text-slate-400"
                >
                  Empfohlenes Modell
                </p>
                <div
                  class="rounded-md border border-slate-200 bg-slate-100 px-3 py-2 text-sm text-slate-700"
                >
                  model 1
                </div>
              </div>
            </aside>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PromptPage rendering tests prompt retrieved - collectionId undefined - test 1`] = `
<div>
  <div
    class="h-screen bg-slate-50"
    data-testid="prompt-view-page"
  >
    <div
      class="flex h-full flex-col bg-slate-50"
      data-testid="prompt-view"
    >
      <div
        class="sticky top-0 z-40 flex h-14 shrink-0 items-center border-b border-slate-200 bg-white px-6"
      >
        <nav
          aria-label="breadcrumb"
          data-slot="breadcrumb"
          data-testid="template-breadcrumb"
        >
          <ol
            class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
            data-slot="breadcrumb-list"
          >
            <li
              class="inline-flex items-center gap-1.5"
              data-slot="breadcrumb-item"
            >
              <a
                class="transition-colors hover:text-foreground"
                data-slot="breadcrumb-link"
                data-testid="root-link"
                href="/templates"
              >
                Prompts
              </a>
            </li>
            <li
              aria-hidden="true"
              class="[&>svg]:size-3.5"
              data-slot="breadcrumb-separator"
              role="presentation"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-right"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </li>
            <li
              class="inline-flex items-center gap-1.5"
              data-slot="breadcrumb-item"
            >
              <span
                aria-current="page"
                aria-disabled="true"
                class="font-normal text-foreground max-w-40 truncate"
                data-slot="breadcrumb-page"
                role="link"
                title="title 1"
              >
                title 1
              </span>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="flex-1 overflow-y-auto"
      >
        <div
          class="mx-auto max-w-7xl px-6 py-8"
        >
          <div
            class="grid gap-8 lg:grid-cols-[1fr_260px]"
          >
            <div
              class="rounded-xl bg-white p-6 shadow-sm"
            >
              <div
                data-testid="template-view-form"
              >
                <div
                  class="mb-8"
                >
                  <div
                    class="mb-3 flex flex-wrap gap-2"
                    data-testid="categories"
                  >
                    <span
                      class="rounded-full border border-blue-200 bg-blue-50 px-2.5 py-0.5 text-xs font-medium text-blue-600"
                    >
                      category 0
                    </span>
                    <span
                      class="rounded-full border border-blue-200 bg-blue-50 px-2.5 py-0.5 text-xs font-medium text-blue-600"
                    >
                      category 1
                    </span>
                    <span
                      class="rounded-full border border-blue-200 bg-blue-50 px-2.5 py-0.5 text-xs font-medium text-blue-600"
                    >
                      category 2
                    </span>
                  </div>
                  <h1
                    class="mb-2 text-3xl font-bold text-slate-900"
                  >
                    title 1
                  </h1>
                  <p
                    class="text-sm text-slate-500"
                  >
                    Erstellt 
                    27.09.2025
                     ·
                     
                    model 1
                  </p>
                </div>
                <div
                  class="mb-8"
                  data-testid="description"
                >
                  <div
                    class="mb-3 border-t border-slate-200 pt-4"
                  >
                    <span
                      class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
                    >
                      Beschreibung
                    </span>
                  </div>
                  <div
                    class="text-sm leading-relaxed text-slate-900"
                    data-testid="react-md"
                  >
                    <div
                      data-testid="react-markdown-mock"
                    >
                      description 1
                    </div>
                  </div>
                </div>
                <div
                  class="border-t border-slate-200 pt-4"
                >
                  <div
                    data-testid="prompt-text"
                  >
                    <div
                      class="mb-3 flex items-center justify-between"
                    >
                      <span
                        class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
                      >
                        Prompt-Text
                      </span>
                      <button
                        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 rounded-md gap-1.5 has-[>svg]:px-2.5 h-8 cursor-pointer px-3 hover:bg-slate-200"
                        data-slot="button"
                        data-testid="copy-btn"
                        title="In Zwischenablage kopieren"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-copy mr-2 h-4 w-4 text-slate-600"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="14"
                            rx="2"
                            ry="2"
                            width="14"
                            x="8"
                            y="8"
                          />
                          <path
                            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                          />
                        </svg>
                        <span
                          class="text-sm text-slate-600"
                        >
                          Kopieren
                        </span>
                      </button>
                    </div>
                    <div
                      class="rounded-lg bg-slate-100 p-5"
                    >
                      <div
                        class="font-mono text-sm leading-relaxed text-slate-900"
                        data-testid="react-md"
                      >
                        <div
                          data-testid="react-markdown-mock"
                        >
                          content 1
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <aside
              class="space-y-3 lg:sticky lg:top-8 lg:self-start"
              data-testid="prompt-sidebar"
            >
              <button
                class="inline-flex items-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-700 text-white hover:bg-blue-800 w-full justify-center py-5 text-sm"
                data-slot="button"
                data-testid="use-prompt-btn"
              >
                <span>
                  Prompt anwenden
                </span>
              </button>
              <div
                class="space-y-1 pt-1"
              >
                <a
                  class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer justify-start"
                  data-slot="button"
                  data-testid="edit-prompt-btn"
                  href="/templates/334db648-f300-4284-8149-075ff465d751/edit"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pen mr-2 h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                    />
                  </svg>
                  Bearbeiten
                </a>
                <button
                  class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer justify-start"
                  data-slot="button"
                  data-testid="download-prompt-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-download mr-2 h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 15V3"
                    />
                    <path
                      d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                    />
                    <path
                      d="m7 10 5 5 5-5"
                    />
                  </svg>
                  Herunterladen
                </button>
                <button
                  class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:hover:bg-accent/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer justify-start text-red-600 hover:bg-red-50 hover:text-red-700"
                  data-slot="button"
                  data-testid="delete-prompt-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-trash2 lucide-trash-2 mr-2 h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 11v6"
                    />
                    <path
                      d="M14 11v6"
                    />
                    <path
                      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                    />
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                    />
                  </svg>
                  Löschen
                </button>
                <div
                  data-slot="alert-dialog"
                  data-testid="mock-react-alert-dialog-root"
                >
                  <div
                    data-slot="alert-dialog-portal"
                    data-testid="mock-react-alert-dialog-portal"
                  >
                    <div
                      class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
                      data-slot="alert-dialog-overlay"
                      data-testid="mock-react-alert-dialog-overlay"
                    />
                  </div>
                </div>
              </div>
              <div
                class="border-t border-slate-200 pt-4"
              >
                <p
                  class="mb-2 text-xs font-medium text-slate-400"
                >
                  Empfohlenes Modell
                </p>
                <div
                  class="rounded-md border border-slate-200 bg-slate-100 px-3 py-2 text-sm text-slate-700"
                >
                  model 1
                </div>
              </div>
            </aside>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
